--- a/WebTechLevel1.html
+++ b/WebTechLevel1.html
@@ -19,9 +19,9 @@
 }
 </style> 
     <div class="nav-container">
-        <a href="#" class="nav-item">Introduction</a>
-        <a href="#" class="nav-item">The Exercises</a>
-        <a href="#" class="nav-item">More Information</a>
+        <a href="#" class="Introduction">Introduction</a>
+        <a href="#" class="The Exercises">The Exercises</a>
+        <a href="#" class="More Information">More Information</a>
     </div>
     <h1> Introduction</h1>
     <p>Today we conducted our first hackathon. It was very fun and challenging. The most challenging part was the speed and accuracy required. We had a few exercises as below. </p>
@@ -64,7 +64,7 @@
 <h1>More Information</h1>
 <p>For more information, please fill in the form below so that we can get back to you.
     <form  action="processing.php" method="post" enctype="multipart/form-data"> 
-        <p>Enter your names, telehone number and Email address</p>   
+    <p>Enter your names, telehone number and Email address</p>   
         <label for="name">Name:</label>
             <input type="text" name="name" id="name" placeholder="Reuben Israel" required>
             <br>
@@ -125,12 +125,10 @@
       <input type="radio" id="debit" name="payment" value="debit" />
       <label for="debit">Debit Card</label> <br />
       <input type="radio" id="paypal" name="payment" value="paypal" />
-      <label for="paypal">Paypal</label> <br />
-    <br>
-           <br>
-            <input type="submit" value="Save Detail">
+      <label for="paypal">Paypal</label> 
+     <br>
+     <br>
+     <input type="submit" value="Save Detail">
 </form>
-
-</p>
 </body>
 </html>   
